syntax = "proto3";

package polly;

// Interface exported by the server.
service Polly {
  rpc add_poll(Poll) returns (Response) {}
  rpc update_poll(UpdatePoll) returns (Response) {}
  rpc list_polls(Empty) returns (Polls) {}
}

message Poll {
  string poll_name = 1;
}

message Action {
  string poll_action = 1;
}

message Polls {
  string polls = 1;
}

message UpdatePoll {
  string poll_name = 1;
  string poll_action = 2;
}

message Response {
  bool done = 1;
}

message Empty {}

